--- a/src/components/App.css
+++ b/src/components/App.css
@@ -299,11 +299,12 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    box-sizing: border-box  ;
 }
 .msg-popup .front p { color:#555; text-align: center; font-weight: 500; font-size: 15px;}
-.msg-popup .front p a { color:white; text-transform: uppercase; text-decoration: none; font-weight: 700; padding:10px 15px; background: #d73449; border-radius: 5px; 
-   display: inline-block;
+.msg-popup .front p a { color:#d73449; font-weight:600; text-decoration: none; }
+.msg-popup .front p a:hover { text-decoration: underline; }
+.msg-popup .front p > br + a:last-child { color:white; text-transform: uppercase; text-decoration: none; font-weight: 700; padding:10px 15px; background: #d73449; border-radius: 5px; 
+   display: inline-block; margin-top: 10px;
 }
 .msg-popup .front .close { color:#555; position:absolute; right:15px; top:15px; cursor: pointer;}
-.msg-popup .front p a:last-child { display: inline-block; margin-top: 10px;}
 
 #root > div > .nav:not(.etext-nav).msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
 #root > div > .nav:not(.etext-nav).msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
