--- a/src/components/App.css
+++ b/src/components/App.css
@@ -310,20 +310,20 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #root > div > :not(.static):first-child ~ .nav:not(.etext-nav).msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
 
 .static-container > #samples > .doc-content { max-width:100%; padding-top:0; padding-bottom:100px;}
-.static .doc-content .index { position:fixed; width:300px; background:white; top:100px; padding:0; padding-top:30px; }
-.static .doc-content .index > div { height:calc(100vh - 80px - 50px - 40px); overflow: auto; box-sizing: border-box; padding-bottom:40px;}
+.static .doc-content .index { position:fixed; width:310px; background:white; top:130px; padding:0; padding-top:0px; padding-bottom:40px;}
+.static .doc-content .index > div { height:calc(100vh - 80px - 50px /*- 40px*/); overflow: auto; box-sizing: border-box; padding-bottom:40px; box-sizing: border-box;}
 .static .doc-content .index ~ * { padding-left:350px; }
-.static .doc-content .index .c11:not(.c18,.c10) a { font-size:16px; font-weight:600; margin-top:5px; display: block;}
-.static .doc-content .index .c10 a { font-size:14px; font-weight:500;}
-.static .doc-content .index .c18 a { font-size:13px; font-weight:400;}
+.static .doc-content .index .c25:not(.c19,.c8) a { font-size:16px; font-weight:600; margin-top:5px; display: block;}
+.static .doc-content .index .c19 a { font-size:14px; font-weight:500;}
+.static .doc-content .index .c8 a { font-size:13px; font-weight:400;}
 .static .doc-content a:focus-visible { outline:none; }
 
-.static .doc-content .index .c25 { display: none;}
+.static .doc-content .index .c27 { display: none;}
 
 .static-container > #samples > .doc-content [id] { scroll-margin:80px; }
 
-.static .doc-content .index + div > h3.c13 > span:not(.c18),
-.static .doc-content .index + div > p.c4.subtitle,
+.static .doc-content .index + div > h3.c24 > span:not(.c18),
+.static .doc-content .index + div > p.c3.subtitle,
 .static .doc-content .index + div > p > span:not(.c18) {width:100% !important; text-align: center; }
 
 .static .doc-content .index + div > p > span { height:auto !important; }
@@ -331,8 +331,9 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .static .doc-content .index + div > p:not(.subtitle) > span:not(.c18,.c1) { padding:0px 0 0 0 !important; margin-top:40px;}
 
-.static .doc-content .index + div > p.c4.subtitle { padding: 0 0 0px 0 !important; margin-top:-10px;margin-bottom:40px;}
+.static .doc-content .index + div > p.c3.subtitle { padding: 0 0 0px 0 !important; margin-top:-10px;margin-bottom:40px;}
 
+.static .doc-content .index sup { display:none; }
 
 [lang='bo'] .static-container[data-dir^="user-guide"] #samples { padding-bottom:0; margin:0 !important; }
 .static-container[data-dir^="user-guide"] #samples .doc-content.bo { padding-bottom:0px; padding-right:0;}
@@ -344,9 +345,9 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .static-container > #samples > .doc-content h3 { text-align: left; text-transform: none;}
 
-.static-container > #samples > .doc-content .c20 { text-decoration:none; }
+.static-container > #samples > .doc-content .c14 { text-decoration:none; }
 
-.static-container[data-dir^="user-guide"] #samples { margin-bottom:40px; padding-top:55px;}
+.static-container[data-dir^="user-guide"] #samples { margin-bottom:0px; padding-top:55px;}
 
 .static-container[data-dir^="user-guide"] #samples img {}
 
@@ -355,6 +356,8 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .static .doc-content .title span { font-family: "Noto Sans TC","Noto Sans", "Noto Serif Tibetan", "Noto Serif Khmer", "Noto Sans Mongolian", "Roboto", "Helvetica", "Arial", sans-serif !important; 
    font-weight: 900; font-size:42px; line-height:44px; white-space: nowrap;
 }
+
+.static .doc-content .title { margin-bottom:30px;}
 
 @media(max-width:1024px) {
    .static-container[data-dir^="user-guide"] #samples { padding:20px;}
